--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,18 +7,34 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@chakra-ui/alert": "^2.2.2",
+    "@chakra-ui/avatar": "^2.3.0",
+    "@chakra-ui/form-control": "^2.2.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/radio": "^2.1.2",
     "@chakra-ui/react": "^3.21.0",
+    "@chakra-ui/tag": "^3.1.1",
+    "@chakra-ui/toast": "^7.0.2",
     "@emotion/react": "^11.14.0",
+    "@hookform/resolvers": "^5.1.1",
+    "@tanstack/react-query": "^5.80.7",
+    "@types/react-router-dom": "^5.3.3",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.2",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -26,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
